; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/gem/selftests/extr_i915_gem_coherency.c_wc_get.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/gem/selftests/extr_i915_gem_coherency.c_wc_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_i915_gem_object = type { i32 }

@I915_MAP_WC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.drm_i915_gem_object*, i64, i32*)* @wc_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wc_get(%struct.drm_i915_gem_object* %0, i64 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.drm_i915_gem_object*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store %struct.drm_i915_gem_object* %0, %struct.drm_i915_gem_object** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32* %2, i32** %7, align 8
  %10 = load %struct.drm_i915_gem_object*, %struct.drm_i915_gem_object** %5, align 8
  %11 = call i32 @i915_gem_object_lock(%struct.drm_i915_gem_object* %10)
  %12 = load %struct.drm_i915_gem_object*, %struct.drm_i915_gem_object** %5, align 8
  %13 = call i32 @i915_gem_object_set_to_wc_domain(%struct.drm_i915_gem_object* %12, i32 0)
  store i32 %13, i32* %9, align 4
  %14 = load %struct.drm_i915_gem_object*, %struct.drm_i915_gem_object** %5, align 8
  %15 = call i32 @i915_gem_object_unlock(%struct.drm_i915_gem_object* %14)
  %16 = load i32, i32* %9, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %3
  %19 = load i32, i32* %9, align 4
  store i32 %19, i32* %4, align 4
  br label %39

20:                                               ; preds = %3
  %21 = load %struct.drm_i915_gem_object*, %struct.drm_i915_gem_object** %5, align 8
  %22 = load i32, i32* @I915_MAP_WC, align 4
  %23 = call i32* @i915_gem_object_pin_map(%struct.drm_i915_gem_object* %21, i32 %22)
  store i32* %23, i32** %8, align 8
  %24 = load i32*, i32** %8, align 8
  %25 = call i64 @IS_ERR(i32* %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %30

27:                                               ; preds = %20
  %28 = load i32*, i32** %8, align 8
  %29 = call i32 @PTR_ERR(i32* %28)
  store i32 %29, i32* %4, align 4
  br label %39

30:                                               ; preds = %20
  %31 = load i32*, i32** %8, align 8
  %32 = load i64, i64* %6, align 8
  %33 = udiv i64 %32, 4
  %34 = getelementptr inbounds i32, i32* %31, i64 %33
  %35 = load i32, i32* %34, align 4
  %36 = load i32*, i32** %7, align 8
  store i32 %35, i32* %36, align 4
  %37 = load %struct.drm_i915_gem_object*, %struct.drm_i915_gem_object** %5, align 8
  %38 = call i32 @i915_gem_object_unpin_map(%struct.drm_i915_gem_object* %37)
  store i32 0, i32* %4, align 4
  br label %39

39:                                               ; preds = %30, %27, %18
  %40 = load i32, i32* %4, align 4
  ret i32 %40
}

declare dso_local i32 @i915_gem_object_lock(%struct.drm_i915_gem_object*) #1

declare dso_local i32 @i915_gem_object_set_to_wc_domain(%struct.drm_i915_gem_object*, i32) #1

declare dso_local i32 @i915_gem_object_unlock(%struct.drm_i915_gem_object*) #1

declare dso_local i32* @i915_gem_object_pin_map(%struct.drm_i915_gem_object*, i32) #1

declare dso_local i64 @IS_ERR(i32*) #1

declare dso_local i32 @PTR_ERR(i32*) #1

declare dso_local i32 @i915_gem_object_unpin_map(%struct.drm_i915_gem_object*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
